MyFirstProject/src/objects/Teacher__c.object
<CustomObject>
    <description>Its parent object</description>
    <fields>
        <fullName>Teacher_Address__c</fullName>
        <description>Enter name of teacher</description>
        <label>Teacher Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Id__c</fullName>
        <description>It shows Parent object Id</description>
        <label>Teacher Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Teacher_c_number__c</fullName>
        <description>It shows contact number</description>
        <label>Teacher c-number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teacher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>